# programista

./: .gitignore  PRIVACY.md  README.md  index.html  pyproject.toml
.github/workflows/: build-binaries.yml  ci.yml
docs/: microsoft-store.md
installer/wix/: License.rtf  Programista.wxs  WixUI_pl-pl.wxl
scripts/: build_windows.ps1  build_windows_msi.ps1  download_windows_release.sh
src/tvguide_app/: __main__.py  app.py
src/tvguide_app/core/: app_updates.py  cache.py  favorites.py  http.py  hub_api.py  models.py  prefetch.py  schedule_cache.py  search_index.py  settings.py  util.py  windows_appmodel.py
src/tvguide_app/core/provider_packs/: loader.py  schema.py  service.py  updater.py  wrappers.py
src/tvguide_app/core/providers/: favorites.py  polskieradio.py  teleman.py
src/tvguide_app/gui/: accessibility.py  feedback_dialog.py  main_frame.py  schedule_tabs.py  search_tab.py
tests/: test_app_updates.py  test_fandom_archive_parser.py  test_favorites.py  test_polskieradio_parser.py  test_provider_packs_loader.py  test_teleman_parser.py
